--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "pg": "^8.16.3"
   },
   "devDependencies": {
-    "drizzle-kit": "^0.31.4"
+    "@types/pg": "^8.15.5",
+    "drizzle-kit": "^0.31.4",
+    "tsx": "^4.20.3"
   }
 }
